--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "assert": "^2.0.0",
     "chai": "^4.2.0",
     "esbuild": "^0.11.13",
+    "esbuild-loader": "^3.0.1",
     "esbuild-register": "^2.5.0",
     "eslint": "^7.15.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^6.2.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-mocha": "^2.0.1",
@@ -71,6 +73,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "util": "^0.12.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
     "yarn": "^1.17.3"
   },
   "nyc": {
