--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@solidity-parser/parser",
-  "version": "0.16.0",
+  "name": "@zoey-t/solidity-parser",
+  "version": "0.0.1",
   "description": "A Solidity parser built from a robust ANTLR 4 grammar",
   "main": "dist/index.cjs.js",
   "browser": {
