--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "description": "A Solidity parser built from a robust ANTLR 4 grammar",
   "main": "./dist/index.iife.js",
-  "browser": {
-    "fs": false,
-    "path": false
-  },
+  "browser": "./dist/index.iife.js",
   "files": [
     "dist/**/*",
     "src/**/*"
